[tool.poetry]
name = "bertopic"
version = "0.16.3"
description = "BERTopic performs topic Modeling with state-of-the-art transformer models."
readme = "README.md"
license = "MIT"
authors = ["Maarten P. Grootendorst <maartengrootendorst@gmail.com>"]
keywords = ["nlp", "bert", "topic", "modeling", "embeddings"]
homepage = "https://github.com/MaartenGr/BERTopic"
repository = "https://github.com/MaartenGr/BERTopic.git"
documentation = "https://maartengr.github.io/BERTopic/"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
hdbscan = ">=0.8.29"
numpy = ">=1.20.0"
pandas = ">=1.1.5"
plotly = ">=4.7.0"
scikit-learn = ">=0.22.2.post1"
tqdm = ">=4.41.1"
umap-learn = ">=0.5.0"
# Added for minimal depends downstream
PyYAML = ">=6.0.1"

[tool.poetry.dev-dependencies]
ruff = { version = "*", extras = ["pydocstyle"] }

[tool.poetry.urls]
homepage = "https://github.com/MaartenGr/BERTopic"
documentation = "https://maartengr.github.io/BERTopic/"
repository = "https://github.com/MaartenGr/BERTopic.git"
issues = "https://github.com/MaartenGr/BERTopic/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]

ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D205", # 1 blank line required between summary line and description
  "E731"  # Do not assign a lambda expression, use a def
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"] # Ignore all docstring errors in tests

[tool.ruff.lint.pydocstyle]
convention = "google"
